# Hyper-Clicker

./: .gitignore  LICENSE  README.md  bun.lockb  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
nested/: position.html  position.ts
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
